[gd_scene load_steps=6 format=3 uid="uid://bak58p4o0klca"]

[ext_resource type="Script" path="res://Screens/Battle/CharacterButton.gd" id="1_kx34e"]
[ext_resource type="FontFile" uid="uid://ba16ggoccu0bx" path="res://sylfaen.ttf" id="4_lpa2y"]

[sub_resource type="Gradient" id="Gradient_dxnge"]
colors = PackedColorArray(1, 1, 1, 0.615686, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_41rce"]
gradient = SubResource("Gradient_dxnge")

[sub_resource type="LabelSettings" id="LabelSettings_0tfrb"]
font = ExtResource("4_lpa2y")
font_size = 36
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="CharacterButton" type="Control"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 3
anchors_preset = 0
offset_right = 412.0
offset_bottom = 60.0
size_flags_horizontal = 3
script = ExtResource("1_kx34e")

[node name="ColorRect" type="ColorRect" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="Control" type="Control" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/Control"]
position = Vector2(138.5, 30)
scale = Vector2(4.32813, 0.9375)
texture = SubResource("GradientTexture2D_41rce")

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(-10, -55)
scale = Vector2(0.0970588, 0.0970588)
centered = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 177.848
offset_top = 16.0
offset_right = 329.848
offset_bottom = 69.0
label_settings = SubResource("LabelSettings_0tfrb")

[node name="BG" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="BG4" type="ColorRect" parent="BG"]
clip_children = 2
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="BG3" type="ColorRect" parent="BG"]
clip_children = 2
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 2.0
grow_vertical = 2
mouse_filter = 2

[node name="BG2" type="ColorRect" parent="BG"]
clip_children = 2
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="BG1" type="ColorRect" parent="BG"]
clip_children = 2
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
